force-app/main/default/objects/Policy__c/fields/Commission_Change_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Change_Amount__c</fullName>
    <label>Commission Change Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>