force-app/main/default/objects/Policy__c/fields/Commission_New__c.field-meta.xml
<CustomField>
    <fullName>Commission_New__c</fullName>
    <formula>Premium__c  *  Commission_Rate__c</formula>
    <label>Agency Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>