force-app/main/default/objects/Policy__c/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <description>Used by Accounting</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Paid</label>
    <type>Date</type>
</CustomField>