force-app/main/default/objects/Policy__c/fields/Commission_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Policy_Type__c</fullName>
    <description>Used to help Accounting categorize policies for commission. Used in Flow &quot;Update Commission Policy Type&quot;</description>
    <label>Commission Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>