force-app/main/default/objects/Policy__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>percentage commission</description>
    <inlineHelpText>View rates here: http://bit.ly/1LdjFYe</inlineHelpText>
    <label>Agency Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>