force-app/main/default/objects/Policy__c/fields/Condensed_Policy__c.field-meta.xml
<CustomField>
    <fullName>Condensed_Policy__c</fullName>
    <description>Condensed Policy Name used for the Revel Invoice DocGen template.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Condensed Policy Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>