force-app/main/default/objects/Policy__c/fields/Contact_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Email__c</fullName>
    <formula>Contact_Person__r.Email</formula>
    <label>Policy Contact Person Email</label>
    <type>Text</type>
</CustomField>