force-app/main/default/objects/Policy__c/fields/Contact_Person_Email_old__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Email_old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Person Email_old</label>
    <length>200</length>
    <type>Text</type>
</CustomField>