force-app/main/default/objects/Policy__c/fields/Contact_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Phone__c</fullName>
    <formula>Contact_Person__r.Phone</formula>
    <label>Policy Contact Person Phone</label>
    <type>Text</type>
</CustomField>