force-app/main/default/objects/Policy__c/fields/Contact_Person_Phone_old__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Phone_old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Person Phone_old</label>
    <length>100</length>
    <type>Text</type>
</CustomField>