force-app/main/default/objects/Policy__c/fields/Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code__c</fullName>
    <defaultValue>&quot;US&quot;</defaultValue>
    <description>Used in Scale Bordereaux report</description>
    <label>Country (ISO Code)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>