force-app/main/default/objects/Policy__c/fields/Country_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Risk__c</fullName>
    <formula>Account__r.BillingCountry</formula>
    <label>Country of Risk</label>
    <type>Text</type>
</CustomField>