force-app/main/default/objects/Policy__c/fields/Coverage_Extension_Update__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Extension_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in &apos;Update Renewal Opp Dates&apos; process builder. Extension date updates dates of the renewal opp.</description>
    <label>Coverage Extension Update</label>
    <type>Checkbox</type>
</CustomField>