force-app/main/default/objects/Policy__c/fields/Coverage_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Not_Found__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage Not Found</label>
    <type>TextArea</type>
</CustomField>