force-app/main/default/objects/Policy__c/fields/Coverage_s_OLD__c.field-meta.xml
<CustomField>
    <fullName>Coverage_s_OLD__c</fullName>
    <label>Coverage(s) (OLD)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Owners Policy</fullName>
            </value>
            <value>
                <fullName>Cyber Liability</fullName>
            </value>
            <value>
                <fullName>Directors &amp; Officers</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
            <value>
                <fullName>Errors &amp; Omissions</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
            <value>
                <fullName>Key Man</fullName>
            </value>
            <value>
                <fullName>Products Liability</fullName>
            </value>
            <value>
                <fullName>Builder&apos;s Risk</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Employment Practices Liability Insurance</fullName>
            </value>
            <value>
                <fullName>Commercial Auto</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Inland Marine</fullName>
            </value>
            <value>
                <fullName>Event General Liability</fullName>
            </value>
            <value>
                <fullName>Special Events</fullName>
            </value>
            <value>
                <fullName>Truck Cargo</fullName>
            </value>
            <value>
                <fullName>Crime Bond</fullName>
            </value>
            <value>
                <fullName>Ocean Cargo</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Media Liability</fullName>
            </value>
            <value>
                <fullName>Kidnap &amp; Ransom</fullName>
            </value>
            <value>
                <fullName>Legal Liability</fullName>
            </value>
            <value>
                <fullName>Cyber Crime (BTC)</fullName>
            </value>
            <value>
                <fullName>Data Breach</fullName>
            </value>
            <value>
                <fullName>Liquor Liability</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Contract Frustration Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>