force-app/main/default/objects/Policy__c/fields/Coverages_Abbreviations__c.field-meta.xml
<CustomField>
    <fullName>Coverages_Abbreviations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverages Abbreviations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>