force-app/main/default/objects/Policy__c/fields/CreatedDate_DateVal__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_DateVal__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDate(DateVal)</label>
    <type>Date</type>
</CustomField>