force-app/main/default/objects/Policy__c/fields/Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date__c</fullName>
    <description>Used by Accounting.

If Billing = Agency or PFA, Payment Received = True, Stage not equal Closed Lost or On Hold,  then populate the Credit Date field with the Payment Received Date 

OR If Billing = Direct, Stage not equal to Closed Lost or On Hold then populate Credit Date field with the Effective Date field of policy</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Date</label>
    <type>Date</type>
</CustomField>