force-app/main/default/objects/Policy__c/fields/Cumulative_Total_Paid_D_O__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Total_Paid_D_O__c</fullName>
    <description>Rolls up summary of Claim: Total Paid (Scale) where Type = D&amp;O. Used for Claims team.</description>
    <label>Cumulative Total Paid (D&amp;O)</label>
    <summarizedField>Claim__c.Total_Paid_Scale__c</summarizedField>
    <summaryFilterItems>
        <field>Claim__c.Type_of_Claim__c</field>
        <operation>equals</operation>
        <value>D&amp;O/Management Liability</value>
    </summaryFilterItems>
    <summaryForeignKey>Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>