force-app/main/default/objects/Policy__c/fields/Cumulative_Total_Paid_FID__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Total_Paid_FID__c</fullName>
    <description>Roll Up Summary of Total Paid (Scale) on the Claim where Type of Claim = Fiduciary</description>
    <label>Cumulative Total Paid (FID)</label>
    <summarizedField>Claim__c.Total_Paid_Scale__c</summarizedField>
    <summaryFilterItems>
        <field>Claim__c.Type_of_Claim__c</field>
        <operation>equals</operation>
        <value>Fiduciary</value>
    </summaryFilterItems>
    <summaryForeignKey>Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>