force-app/main/default/objects/Policy__c/fields/Cumulative_Total_Paid_Scale_Claims__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Total_Paid_Scale_Claims__c</fullName>
    <label>Cumulative Total Paid (Scale Claims)</label>
    <summarizedField>Claim__c.Total_Paid_Scale__c</summarizedField>
    <summaryForeignKey>Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>