force-app/main/default/objects/Policy__c/fields/Cumulative_Total_Reserve_Scale_Claims__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Total_Reserve_Scale_Claims__c</fullName>
    <description>Rollup of Total Reserve on the Claims page</description>
    <label>Cumulative Total Reserve (Scale Claims)</label>
    <summarizedField>Claim__c.Total_Reserve_Scale__c</summarizedField>
    <summaryForeignKey>Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>