force-app/main/default/objects/Policy__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>&quot;USD&quot;</defaultValue>
    <description>Scale</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>