force-app/main/default/objects/Policy__c/fields/D_O_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>D_O_Rate_Change__c</fullName>
    <description>Risk-adjusted increase in rate relative to origin policy</description>
    <label>D&amp;O Rate Change</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>