force-app/main/default/objects/Policy__c/fields/Days_In_Processing__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Processing__c</fullName>
    <formula>IF( 
ISBLANK( Processing_Start_Date__c ),
0,
IF( 
ISBLANK( Processing_End_Date__c ),
TODAY() - Processing_Start_Date__c + 1,
Processing_End_Date__c - Processing_Start_Date__c + 1
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>