force-app/main/default/objects/Policy__c/fields/Days_Processing__c.field-meta.xml
<CustomField>
    <fullName>Days_Processing__c</fullName>
    <description>Used in apex class</description>
    <label>Days Processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>