force-app/main/default/objects/Policy__c/fields/Days_Until_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Renewal__c</fullName>
    <formula>IF( NOT( ISBLANK (Tail_Expiration_Date__c )), Tail_Expiration_Date__c - TODAY(), 
IF( Renewal_Date__c - TODAY() &gt; 0, Renewal_Date__c - TODAY(), 0 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>