force-app/main/default/objects/Policy__c/fields/Description_of_the_Risk__c.field-meta.xml
<CustomField>
    <fullName>Description_of_the_Risk__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of the Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>