force-app/main/default/objects/Policy__c/fields/Due_to_SL_Filer__c.field-meta.xml
<CustomField>
    <fullName>Due_to_SL_Filer__c</fullName>
    <description>QBO</description>
    <formula>(State_Filing_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due to SL Filer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>