force-app/main/default/objects/Policy__c/fields/Due_Upon_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Due_Upon_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QBO</description>
    <label>Due Upon Receipt</label>
    <type>Checkbox</type>
</CustomField>