force-app/main/default/objects/Policy__c/fields/E_Consent_Received__c.field-meta.xml
<CustomField>
    <fullName>E_Consent_Received__c</fullName>
    <inlineHelpText>=Yes, then E-delivery is allowed
=No, then E-delivery is not allowed and items must be mailed.
By Default the following states will be no, AR, HI, IA, LA, ME, MD, MA, MN, NJ, ND, TN, and TX</inlineHelpText>
    <label>E-Consent Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>