force-app/main/default/objects/Policy__c/fields/Effective_Date_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Transaction__c</fullName>
    <description>Used in Scale Bordereaux</description>
    <formula>Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date of Transaction</label>
    <type>Date</type>
</CustomField>