force-app/main/default/objects/Policy__c/fields/Endorsement_Names__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List of Endorsements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>