force-app/main/default/objects/Policy__c/fields/Endorsements_90_days__c.field-meta.xml
<CustomField>
    <fullName>Endorsements_90_days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF -1035</description>
    <label>Endorsements &gt; 90 days</label>
    <type>Checkbox</type>
</CustomField>