force-app/main/default/objects/Policy__c/fields/Endt_FS_Fees__c.field-meta.xml
<CustomField>
    <fullName>Endt_FS_Fees__c</fullName>
    <label>Endt FS Fees</label>
    <summarizedField>Endorsement__c.FS_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Endorsement__c.Stage__c</field>
        <operation>equals</operation>
        <value>Bind Order Sent, Delivered to Insured</value>
    </summaryFilterItems>
    <summaryForeignKey>Endorsement__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>