force-app/main/default/objects/Policy__c/fields/EPL_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>EPL_Rate_Change__c</fullName>
    <description>Risk-adjusted change in rate based on expiring policy</description>
    <label>EPL Rate Change</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>