force-app/main/default/objects/Policy__c/fields/Excess_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Excess_Endorsements__c</fullName>
    <label>Excess Endorsements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Excess_Endorsements</valueSetName>
    </valueSet>
</CustomField>