force-app/main/default/objects/Policy__c/fields/Expiration_Date_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_of_Transaction__c</fullName>
    <formula>Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date of Transaction</label>
    <type>Date</type>
</CustomField>