force-app/main/default/objects/Policy__c/fields/Expiry_Date_of_Transaction1__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_of_Transaction1__c</fullName>
    <description>used for Lloyd&apos;s bordereau</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date of Transaction1</label>
    <type>Date</type>
</CustomField>