force-app/main/default/objects/Policy__c/fields/Export_List_Item__c.field-meta.xml
<CustomField>
    <fullName>Export_List_Item__c</fullName>
    <description>Used in SL1Form</description>
    <label>Export List Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCIDENT/DISABILITY</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILES</fullName>
            </value>
            <value>
                <fullName>AVIATION</fullName>
            </value>
            <value>
                <fullName>CRIME</fullName>
            </value>
            <value>
                <fullName>FIRE &amp; ALLIED LINES</fullName>
            </value>
            <value>
                <fullName>GENERAL LIABILITY</fullName>
            </value>
            <value>
                <fullName>INLAND MARINE</fullName>
            </value>
            <value>
                <fullName>MISCELLANEOUS</fullName>
            </value>
            <value>
                <fullName>PROFESSIONAL LIABILITY/ERRORS &amp; OMISSION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>