force-app/main/default/objects/Policy__c/fields/Export_List_Sub_Item__c.field-meta.xml
<CustomField>
    <fullName>Export_List_Sub_Item__c</fullName>
    <description>Used in SL1Form</description>
    <label>Export List Sub Item</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Export_List_Item__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INDIVIDUAL INSUREDS WITH LARGE SCHEDULES WHERE THE TIV(TOTAL INSURED VALUES)AR 409</fullName>
            </value>
            <value>
                <fullName>CONTRACTORS ENGAGED IN CONSTRUCTION OF NEW TRACT HOMES AND/OR NEW CONDOMINIUMS --- 566</fullName>
            </value>
            <value>
                <fullName>CRANE &amp; RIGGING CONTRACTORS --- 591</fullName>
            </value>
            <value>
                <fullName>DEMOLITION CONTRACTORS --- 567</fullName>
            </value>
            <value>
                <fullName>EMPLOYMENT PRACTICES LIABILITY --- 569</fullName>
            </value>
            <value>
                <fullName>ENVIRONMENTAL IMPAIRMENT REMEDIATION AND POLLUTION LIABILITY --- 568</fullName>
            </value>
            <value>
                <fullName>EXCESS LIABILITY WHERE PART OF UNDERLYING IS NONADMITTED --- 582</fullName>
            </value>
            <value>
                <fullName>EXPLOSIVES INCLUDING MANUFACTURING/SALES/STORAGE --- 570</fullName>
            </value>
            <value>
                <fullName>FIREWORKS DISPLAYS --- 571</fullName>
            </value>
            <value>
                <fullName>FOSTER FAMILY (OCCURRENCE BASED ONLY) --- 588</fullName>
            </value>
            <value>
                <fullName>HOT AIR BALLOON --- 589</fullName>
            </value>
            <value>
                <fullName>LIMITS THAT ATTACH IN EXCESS OF $150 MILLION --- 573</fullName>
            </value>
            <value>
                <fullName>OILFIELD CONTRACTORS --- 574</fullName>
            </value>
            <value>
                <fullName>OUTFITTERS AND GUIDES --- 579</fullName>
            </value>
            <value>
                <fullName>PATENT/TRADEMARK/COPYRIGHT INFRINGEMENT --- 572</fullName>
            </value>
            <value>
                <fullName>PRODUCTS RECALL --- 576</fullName>
            </value>
            <value>
                <fullName>PRODUCTS/COMPLETED OPERATIONS(WRITTEN ON A STAND ALONE BASIS) --- 575</fullName>
            </value>
            <value>
                <fullName>SEASONAL OR MOBILE FAIRS, CONCESSIONAIRES, VENDORS AND FAIRS, WITH OR WITHOUT LIQUOR LIABILITY  --- 587</fullName>
            </value>
            <value>
                <fullName>SECURITY GUARD SERVICES --- 581</fullName>
            </value>
            <value>
                <fullName>SHORT TERM MEDIA/ENTERTAINMENT RAILROAD PROTECTIVE LIABILITY (FILM/ENTERTAINMENT PRODUCTIONS)  --- 592</fullName>
            </value>
            <value>
                <fullName>SHORT TERM SPECIAL EVENTS (EXCLUDING HOLE-IN-ONE) --- 580</fullName>
            </value>
            <value>
                <fullName>TATTOO AND BODY PIERCING SHOPS --- 583</fullName>
            </value>
            <value>
                <fullName>ALL VESSELS IN EXCESS OF 30 FEET AND RATED WITH A MAXIMUM SPEED OF 45 MPH --- 454</fullName>
            </value>
            <value>
                <fullName>ANY VESSEL/WITH A MAXIMUM RATED SPEED IN EXCESS OF 55 MPH --- 452</fullName>
            </value>
            <value>
                <fullName>EXCESS MOTOR TRUCK CARGO --- 451</fullName>
            </value>
            <value>
                <fullName>PERSONAL ARTICLES FLOATERS WRITTEN ON A STAND ALONE BASIS WHERE THE VALUE OF THE SCHEDULE IS IN EXCESS OF $1M OR CONTAINS A SINGLE ITEM(S) OVER $100,000</fullName>
                <label>PERSONAL ARTICLES FLOATERS WRITTEN ON A STAND ALONE BASIS WHERE THE VALUE OF THE SCHEDULE IS IN EXCESS OF $1M OR CONTAINS A SINGLE ITEM(S) OVER $100,000 --- 453</label>
            </value>
            <value>
                <fullName>EVENT CANCELLATION --- 656</fullName>
            </value>
            <value>
                <fullName>POLITICAL RISKS INCLUDING EXPROPRIATION, CONFISCATION, UNFAIR CALLING --- 655</fullName>
            </value>
            <value>
                <fullName>PRIZE INDEMNIFICATION (EXCLUDING HOLE-IN-ONE COVERAGE) --- 657</fullName>
            </value>
            <value>
                <fullName>SHORT TERM MEDIA/ENTERTAINMENT FAILURE TO SURVIVE FOR $5 MILLION AND OVER (FILM/ENTERTAINMENT PRODUCTIONS) --- 658</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>