force-app/main/default/objects/Policy__c/fields/Fees_and_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Fees_and_Assessments__c</fullName>
    <description>Wholesale Fee + Underwriting Fee + Program Fee + FS Fee</description>
    <formula>Wholesale_Fee__c + Underwriting_Fee__c + FS_Fees__c +  Program_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fees and Assessments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>