force-app/main/default/objects/Policy__c/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <formula>Account__r.FEIN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FEIN</label>
    <type>Text</type>
</CustomField>