force-app/main/default/objects/Policy__c/fields/FID_Rated_Premium__c.field-meta.xml
<CustomField>
    <fullName>FID_Rated_Premium__c</fullName>
    <description>Scate</description>
    <label>FID Rated Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>