force-app/main/default/objects/Policy__c/fields/Fiduciary_Coverages_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fiduciary_Coverages_Notes__c</fullName>
    <description>Scale - populates from the notes field on the quote</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FID Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>