force-app/main/default/objects/Policy__c/fields/Finance_Agreement_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Finance_Agreement_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Agreement Submitted</label>
    <type>Checkbox</type>
</CustomField>