force-app/main/default/objects/Policy__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Scale LLoyd&apos;s Bordereau only</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>