force-app/main/default/objects/Policy__c/fields/Follow_form__c.field-meta.xml
<CustomField>
    <fullName>Follow_form__c</fullName>
    <formula>TEXT(Opportunity__r.Follow_form__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow form?</label>
    <type>Text</type>
</CustomField>